--- a/css/media.less
+++ b/css/media.less
@@ -49,7 +49,7 @@
         }
       }
       .page-nav {
-        margin: 40px 40px 0;
+        margin: 40px 30px 0;
         &:before {
           right: -40px;
         }
@@ -161,7 +161,7 @@
         }
       }
       .page-nav {
-        margin: 30px 30px 0;
+        margin: 30px 20px 0;
         &:before {
           right: -30px;
         }
@@ -235,6 +235,19 @@
                   &:hover {
                     line-height: 45px;
                   }
+                }
+              }
+            }
+          }
+        }
+        .advantage {
+          &-block {
+            &-item {
+              height: 130px;
+              padding: 0 15px 0 20px;
+              &-text {
+                &-title {
+                  font-size: 22px;
                 }
               }
             }
@@ -314,8 +327,6 @@
               }
             }
           }
-        }
-        .features {
         }
         .profit-spend {
           padding: 45px 30px 0;
@@ -738,6 +749,23 @@
           }
         }
       }
+      .guarantee-page {
+        .inner {
+          .tender {
+            padding-right: 0;
+            &-content {
+              max-width: 540px;
+              margin-right: 30px;
+              &-desc {
+                font-size: 20px;
+              }
+            }
+            &-image {
+              max-width: 405px;
+            }
+          }
+        }
+      }
       .policy-page {
         .inner {
           .top-banner {
@@ -930,6 +958,9 @@
                 padding: 0 10px;
               }
             }
+          }
+          .content-block {
+            margin-top: 70px;
           }
         }
       }
@@ -1968,6 +1999,14 @@
   }
 }
 @media (max-width: 1239px) {
+  .text-block {
+    &-title {
+      font-size: 32px;
+    }
+    .footnotes {
+      margin-top: 30px;
+    }
+  }
   .wrapper {
     .inner {
       width: 960px;
@@ -2040,6 +2079,13 @@
         .advantage {
           &-block {
             margin-top: 30px;
+            &-item {
+              &-text {
+                &-title {
+                  font-size: 20px;
+                }
+              }
+            }
           }
         }
         .choose {
@@ -2080,8 +2126,6 @@
               }
             }
           }
-        }
-        .features {
         }
         .request {
           &-block {
@@ -2533,6 +2577,25 @@
               img {
                 height: 100%;
               }
+            }
+          }
+        }
+      }
+      .guarantee-page {
+        .inner {
+          .top-banner {
+            &-image {
+              width: 250px;
+            }
+          }
+          .tender {
+            &-content {
+              &-desc {
+                font-size: 18px;
+              }
+            }
+            &-image {
+              max-width: 350px;
             }
           }
         }
@@ -3140,6 +3203,13 @@
           }
         }
       }
+      .remote-service-page {
+        .inner {
+          .content-block {
+            margin-top: 60px;
+          }
+        }
+      }
     }
     footer {
       .inner {
@@ -3181,6 +3251,14 @@
   }
 }
 @media (max-width: 979px) {
+  .text-block {
+    &-title {
+      font-size: 28px;
+    }
+    .footnotes {
+      margin-top: 25px;
+    }
+  }
   .wrapper {
     .inner {
       width: 740px;
@@ -3245,16 +3323,8 @@
           }
         }
         .advantage {
-          &-title {
-            font-size: 30px;
-            line-height: 1.4;
-          }
-          &-desc {
-            margin-top: 15px;
-            font-size: 16px;
-          }
           &-block {
-            margin-top: 25px;
+            margin-top: 20px;
             &-item {
               width: ~'calc((100% - 40px)/3)';
             }
@@ -4098,6 +4168,15 @@
           }
         }
       }
+      .guarantee-page {
+        .inner {
+          .tender {
+            &-image {
+              max-width: 300px;
+            }
+          }
+        }
+      }
       .bonuses-page-detail {
         padding-bottom: 70px;
         .inner {
@@ -4508,6 +4587,9 @@
                 }
               }
             }
+          }
+          .content-block {
+            margin-top: 50px;
           }
         }
       }
@@ -5552,7 +5634,19 @@
   }
 }
 @media (max-width: 768px) {
+  .text-block {
+    &-title {
+      font-size: 24px;
+    }
+    .footnotes {
+      margin-top: 20px;
+      &-item {
+        font-size: 16px;
+      }
+    }
+  }
   ul.list {
+    margin-top: 10px;
     li {
       font-size: 16px;
       &:before {
@@ -5714,28 +5808,16 @@
           &-block {
             display: block;
             &-item {
-              margin-top: 15px;
-              padding-top: 0;
               width: 100%;
-              flex-direction: row-reverse;
-              justify-content: flex-end;
-              background: transparent;
+              &:nth-child(n) {
+                margin-top: 15px;
+              }
               &:first-child {
                 margin-top: 0;
               }
-              &-text {
-                margin: 0 0 0 15px;
-                padding-top: 20px;
-                font-size: 14px;
-                color: @black;
-              }
               &-image {
-                flex-grow: unset;
-                flex: unset;
-                min-width: 64px;
-                min-height: 64px;
-                border-radius: 10px;
-                background: #f2f9fd;
+                width: 15%;
+                min-width: 75px;
               }
             }
           }
@@ -6579,6 +6661,18 @@
           }
         }
       }
+      .guarantee-page {
+        .inner {
+          .tender {
+            &-content {
+              max-width: 100%;
+            }
+            &-image {
+              display: none;
+            }
+          }
+        }
+      }
       .journal-page {
         .inner {
           .top-banner {
@@ -6751,6 +6845,7 @@
             }
           }
           .content-block {
+            margin-top: 40px;
             &.with-bg {
               border-radius: 0;
               .bg-outside;
@@ -8151,10 +8246,6 @@
             }
             &-item {
               width: 47%;
-              &:nth-child(3) {
-                width: 40%;
-                order: 1;
-              }
               &:nth-child(9) {
                 order: 2;
                 margin-bottom: 0;
@@ -8829,6 +8920,20 @@
                 &.detail {
                   width: 100%;
                 }
+              }
+            }
+          }
+        }
+      }
+      .guarantee-page {
+        .inner {
+          .tender {
+            &-block {
+              &-text {
+                max-width: unset;
+              }
+              &-image {
+                display: none;
               }
             }
           }
