--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,17 @@ ul.list li:before {
   margin-top: 15px;
   font: 300 18px/1.5 'Gilroy', sans-serif;
 }
+.text-block .footnotes {
+  margin-top: 40px;
+}
+.text-block .footnotes-item {
+  margin-top: 10px;
+  font: 300 18px/1.3 'Gilroy', sans-serif;
+  color: rgba(0, 0, 0, 0.6);
+}
+.text-block .footnotes-item:first-child {
+  margin-top: 0;
+}
 ::-ms-clear {
   display: none;
 }
@@ -445,8 +456,8 @@ ul.list li:before {
 }
 .wrapper header .page-nav {
   position: absolute;
-  width: 220px;
-  margin: 40px 50px 0;
+  width: 230px;
+  margin: 40px 45px 0;
   background: #fff;
 }
 .wrapper header .page-nav:before {
@@ -3031,10 +3042,11 @@ ul.list li:before {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100px;
+  min-height: 100px;
 }
 .wrapper main .main-page .inner .features-awards-block-item-image img {
-  height: 100%;
+  max-width: 75%;
+  max-height: 100px;
 }
 .wrapper main .main-page .inner .features-awards-block-item-place {
   margin-top: 30px;
@@ -5779,6 +5791,62 @@ ul.list li:before {
 .wrapper main .direct-bank-page .inner .steps-block-item {
   width: 32%;
 }
+.wrapper main .guarantee-page .inner .top-banner:before {
+  content: '';
+  right: 35%;
+  top: 155px;
+  width: 31px;
+  height: 31px;
+}
+.wrapper main .guarantee-page .inner .top-banner:after {
+  content: '';
+  right: 45%;
+  top: 30px;
+  width: 54px;
+  height: 54px;
+}
+.wrapper main .guarantee-page .inner .top-banner-wave {
+  display: block;
+  right: 40%;
+  top: 50px;
+  height: 24px;
+}
+.wrapper main .guarantee-page .inner .top-banner-image {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 310px;
+}
+.wrapper main .guarantee-page .inner .tender {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-right: 75px;
+}
+.wrapper main .guarantee-page .inner .tender-content {
+  max-width: 570px;
+}
+.wrapper main .guarantee-page .inner .tender-content-desc {
+  font: 300 22px/1.5 'Gilroy', sans-serif;
+}
+.wrapper main .guarantee-page .inner .tender-image {
+  max-width: 460px;
+}
+.wrapper main .guarantee-page .inner .tender-image img {
+  width: 100%;
+}
+.wrapper main .guarantee-page .inner .text-block-desc a {
+  color: #f65e64;
+  white-space: nowrap;
+}
+.wrapper main .guarantee-page .inner .text-block-desc a:hover {
+  text-decoration: underline;
+}
 .wrapper main .help-page .inner .top-banner {
   min-height: 225px;
 }
@@ -6965,7 +7033,7 @@ ul.list li:before {
   transition: 0.3s;
 }
 .wrapper main .partner-program-page .inner .questions-desc {
-  font: 300 22px/1.3 'Gilroy', sans-serif;
+  font: 300 22px/1.5 'Gilroy', sans-serif;
 }
 .wrapper main .partner-program-page .inner .questions-desc a {
   color: #f65e64;
@@ -7534,6 +7602,7 @@ ul.list li:before {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-top: 80px;
 }
 .wrapper main .remote-service-page .inner .content-block-item {
   display: -webkit-box;
