--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,46 @@ ul.list li:before {
 .wrapper a:hover {
   color: #f65e64;
 }
+.wrapper .ui-btn {
+  position: relative;
+  display: block;
+  width: 200px;
+  text-align: center;
+  font: 300 18px/53px 'Gilroy', sans-serif;
+  color: #f65e64;
+  background: #fff;
+  border: 1px solid #f65e64;
+  border-radius: 35px;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+  z-index: 0;
+}
+.wrapper .ui-btn:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(#eb5760), to(#fd9b5c));
+  background: linear-gradient(to right, #eb5760, #fd9b5c);
+  border-radius: 35px;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: -1;
+}
+.wrapper .ui-btn:hover {
+  line-height: 55px;
+  color: #fff;
+  border: none;
+}
+.wrapper .ui-btn:hover:before {
+  opacity: 1;
+}
+.wrapper .ui-btn:hover span:before {
+  border-color: #fff;
+}
 .wrapper header {
   position: fixed;
   -webkit-box-flex: 0;
@@ -224,7 +264,7 @@ ul.list li:before {
   margin-bottom: 0;
 }
 .wrapper header .inner .header-nav-item {
-  margin-right: 67.5px;
+  margin-right: 45px;
 }
 .wrapper header .inner .header-nav-item:last-child {
   margin-right: 0;
@@ -235,12 +275,28 @@ ul.list li:before {
 .wrapper header .inner .header-nav-item a.selected {
   color: #f65e64;
 }
+.wrapper header .inner .header-nav-item a.gifts {
+  position: relative;
+  padding-left: 30px;
+}
+.wrapper header .inner .header-nav-item a.gifts:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 21px;
+  height: 21px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url(../img/icon_gift_red.svg) no-repeat;
+  background-size: contain;
+}
 .wrapper header .inner .header-lk {
   margin-left: auto;
 }
 .wrapper header .inner .header-lk a {
   position: relative;
-  padding-left: 25px;
+  padding-left: 30px;
   font: 300 18px/22px 'Gilroy', sans-serif;
 }
 .wrapper header .inner .header-lk a:before {
@@ -248,7 +304,7 @@ ul.list li:before {
   position: absolute;
   left: 0;
   top: 50%;
-  width: 16px;
+  width: 21px;
   height: 21px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -256,7 +312,7 @@ ul.list li:before {
   background-size: contain;
 }
 .wrapper header .inner .header-phone {
-  margin-left: 84px;
+  margin-left: 60px;
   margin-bottom: -15px;
   text-align: right;
 }
@@ -2621,6 +2677,66 @@ ul.list li:before {
   width: 430px;
 }
 .wrapper main .main-page .inner .category .bonus-image img {
+  width: 100%;
+}
+.wrapper main .main-page .inner .category .gifts {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 290px;
+  padding-left: 30px;
+  background: #fff7f7;
+  cursor: unset;
+}
+.wrapper main .main-page .inner .category .gifts:before {
+  content: '';
+  position: absolute;
+  top: 30px;
+  right: 33%;
+  width: 54px;
+  height: 54px;
+  background: url(../img/icon_bubble.svg);
+  background-size: contain;
+}
+.wrapper main .main-page .inner .category .gifts:hover:before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.wrapper main .main-page .inner .category .gifts-wave {
+  display: block;
+  top: 50px;
+  right: 36%;
+  height: 24px;
+}
+.wrapper main .main-page .inner .category .gifts-content {
+  padding: 75px 0 40px;
+  max-width: 510px;
+}
+.wrapper main .main-page .inner .category .gifts-content-title {
+  font: 700 22px/1.3 'Gilroy', sans-serif;
+}
+.wrapper main .main-page .inner .category .gifts-content-desc {
+  margin-top: 15px;
+  font: 300 16px/1.5 'Gilroy', sans-serif;
+}
+.wrapper main .main-page .inner .category .gifts-content-button {
+  margin-top: 20px;
+}
+.wrapper main .main-page .inner .category .gifts-content-button a {
+  width: 220px;
+  background: none;
+}
+.wrapper main .main-page .inner .category .gifts-image {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  max-width: 475px;
+}
+.wrapper main .main-page .inner .category .gifts-image img {
   width: 100%;
 }
 .wrapper main .main-page .inner .best-tariffs-top {
