--- a/css/media.css
+++ b/css/media.css
@@ -1648,12 +1648,27 @@
     bottom: 10px;
     width: 300px;
   }
-  .wrapper main .main-page .inner .category-text-title {
-    font: 700 20px/1.4 'Gilroy', sans-serif;
+  .wrapper main .main-page .inner .category .gifts {
+    height: 250px;
   }
-  .wrapper main .main-page .inner .category-text-desc {
-    margin-top: 10px;
-    font-weight: 300;
+  .wrapper main .main-page .inner .category .gifts:before,
+  .wrapper main .main-page .inner .category .gifts-wave {
+    display: none;
+  }
+  .wrapper main .main-page .inner .category .gifts-content {
+    -ms-flex-item-align: center;
+        align-self: center;
+    padding: 0;
+  }
+  .wrapper main .main-page .inner .category .gifts-content-button a {
+    width: 200px;
+    line-height: 43px;
+  }
+  .wrapper main .main-page .inner .category .gifts-content-button a:hover {
+    line-height: 45px;
+  }
+  .wrapper main .main-page .inner .category .gifts-image {
+    width: 375px;
   }
   .wrapper main .main-page .inner .best-tariffs {
     position: relative;
@@ -4883,7 +4898,7 @@
   .wrapper main .main-page .inner .category .bonus {
     width: 100%;
     height: 190px;
-    padding: 0 15px;
+    padding: 0 15px !important;
   }
   .wrapper main .main-page .inner .category .bonus-content-text {
     margin-top: 10px;
@@ -4893,6 +4908,37 @@
   }
   .wrapper main .main-page .inner .category .bonus-content-text-desc {
     margin-top: 10px;
+  }
+  .wrapper main .main-page .inner .category .gifts {
+    height: 220px;
+    padding: 15px !important;
+  }
+  .wrapper main .main-page .inner .category .gifts-content {
+    max-width: 230px;
+  }
+  .wrapper main .main-page .inner .category .gifts-content-title {
+    font-size: 16px;
+  }
+  .wrapper main .main-page .inner .category .gifts-content-desc {
+    margin-top: 10px;
+    font-size: 14px;
+  }
+  .wrapper main .main-page .inner .category .gifts-content-button {
+    margin-top: 15px;
+  }
+  .wrapper main .main-page .inner .category .gifts-content-button a {
+    width: 130px;
+    font-size: 14px;
+    line-height: 33px;
+  }
+  .wrapper main .main-page .inner .category .gifts-content-button a:hover {
+    line-height: 35px;
+  }
+  .wrapper main .main-page .inner .category .gifts-image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 250px;
   }
   .wrapper main .main-page .inner .best-tariffs-top-title {
     font-size: 24px;
@@ -7113,6 +7159,9 @@
   }
   .wrapper main .main-page .inner .category .bonus-content-text-desc {
     display: none;
+  }
+  .wrapper main .main-page .inner .category .gifts-image {
+    width: 160px;
   }
   .wrapper main .main-page .inner .best-tariffs-top-more {
     display: none;
