--- a/css/media.less
+++ b/css/media.less
@@ -4182,6 +4182,25 @@
           }
         }
       }
+      .actions-detail-page {
+        .inner {
+          .become-client {
+            padding-left: 35px;
+            &-content {
+              padding-top: 35px;
+              &-button {
+                a {
+                  width: 180px;
+                  line-height: 45px;
+                  &:hover {
+                    line-height: 43px;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
       .guarantee-page {
         .inner {
           .tender {
@@ -6502,6 +6521,25 @@
                     }
                   }
                 }
+              }
+            }
+          }
+        }
+      }
+      .actions-detail-page {
+        .inner {
+          .fast-service {
+            &-image {
+              display: none;
+            }
+          }
+          .become-client {
+            &-content {
+              &-title {
+                font-size: 20px;
+              }
+              &-desc {
+                font-size: 16px;
               }
             }
           }
@@ -9090,6 +9128,39 @@
                   margin-top: 0;
                 }
               }
+            }
+          }
+        }
+      }
+      .actions-detail-page {
+        .inner {
+          .become-client {
+            position: relative;
+            padding-left: 20px;
+            &-content {
+              padding: 20px 0 40px;
+              &-title {
+                font-size: 18px;
+              }
+              &-desc {
+                font-size: 14px;
+              }
+              &-button {
+                a {
+                  width: 150px;
+                  font-size: 16px;
+                  line-height: 35px;
+                  &:hover {
+                    line-height: 33px;
+                  }
+                }
+              }
+            }
+            &-image {
+              position: absolute;
+              right: 0;
+              bottom: 0;
+              width: 150px;
             }
           }
         }
